@@ -1,3 +1,11 @@
+2022-10-13T08:24:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3240797717 # 931
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 332 579 / 343 600
+* notice: next accum: outdated-unq outdated-all / unq all: 332 579 / 344 600
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-29 2022-10-13]
+
 2022-10-13T01:46:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3239112579 # 930
 * notice: last 14d: unq all: 5 21
